# nanozero

./: .gitignore  README.md  pom.xml
nanozero-board/: pom.xml
nanozero-jobserver/: .dockerignore  Dockerfile  pyproject.toml
nanozero-jobserver/deploy/: nanozero-jobserver.service
nanozero-jobserver/src/nanozero_jobserver/: __init__.py  auth.py  config.py  main.py  middleware.py  submit_codec.py  ttl_cache.py  validation.py
nanozero-jobserver/src/nanozero_jobserver/api/: __init__.py  admin.py  cycle.py  jobs.py  models.py  replay.py  sprt.py  stats.py
nanozero-jobserver/src/nanozero_jobserver/services/: __init__.py  flusher.py
nanozero-jobserver/src/nanozero_jobserver/storage/: __init__.py  batches.py  contributors.py  control.py  db.py  drift.py  jobs.py  maintenance.py  models.py  npz_writer.py  replay_buffer.py  sprt.py
nanozero-jobserver/tests/: conftest.py  test_api_admin.py  test_api_autorefill.py  test_api_cycle.py  test_api_jobs.py  test_api_models.py  test_api_public_routes.py  test_api_replay.py  test_api_sprt.py  test_api_stats.py  test_api_submit_binary.py  test_auth.py  test_config.py  test_contributors.py  test_db_schema.py  test_health.py  test_main_flusher_wiring.py  test_middleware_gzip.py  test_migrate_existing_db.py  test_pg_smoke.py  test_quarantine_browser.py  test_services_flusher.py  test_storage_batches.py  test_storage_control.py  test_storage_db.py  test_storage_drift.py  test_storage_jobs.py  test_storage_maintenance.py  test_storage_models.py  test_storage_npz_writer.py  test_storage_replay_buffer.py  test_storage_replay_buffer_flush.py  test_storage_sprt.py  test_submit_binary.py  test_ttl_cache.py  test_validation.py
nanozero-jobserver/tools/: migrate_existing_db.py
nanozero-nn/: pom.xml
nanozero-training/: .gitignore  pyproject.toml
nanozero-training/configs/: default.yaml  example-run.yaml  h100-run.yaml  w3090-mini.yaml  w3090-run.yaml
nanozero-training/scripts/: generate_gen0_model.py  reshard_uniform.py  validate_w3090_env.py
nanozero-training/src/nanozero_training/: __init__.py  cli.py
nanozero-training/src/nanozero_training/config/: __init__.py  loader.py  run_config.py
nanozero-training/src/nanozero_training/data/: dataset.py  npz_writer.py  sample.py
nanozero-training/src/nanozero_training/eval/: __init__.py  fastchess_runner.py  pgn_utils.py  sprt_result.py
nanozero-training/src/nanozero_training/jobserver_client/: __init__.py  cli.py  trainer.py  trainer_loop.py  worker.py
nanozero-training/src/nanozero_training/monitoring/: __init__.py  csv_writer.py  flask_app.py
nanozero-training/src/nanozero_training/network/: export_npz.py  export_onnx.py  init.py  move_encoding.py  position_encoding.py  resnet.py
nanozero-training/src/nanozero_training/pipeline/: __init__.py  orchestrator.py  phase_runner.py
nanozero-training/src/nanozero_training/selfplay/: __init__.py  config.py  orchestrator.py  temperature.py  uci_client.py  value_backfill.py  visits_parser.py  worker.py
nanozero-training/src/nanozero_training/state/: manager.py  signals.py
nanozero-training/tests/fixtures/: move_encoding_parity.csv
nanozero-training/tests/integration/: test_generate_gen0.py  test_move_encoding_parity.py  test_orchestrator_subprocess.py  test_parity_vs_nn_reference.py  test_pipeline_slow.py  test_position_encoding_parity.py  test_sprt_slow.py  test_trainer_slow.py  test_uci_client_subprocess.py  test_worker_subprocess.py
nanozero-training/tests/unit/: test_atomic_io.py  test_checkpoint.py  test_cli.py  test_cli_wiring.py  test_config_loader.py  test_continued_training_load.py  test_csv_writer.py  test_dataloader.py  test_dataset.py  test_eval_package.py  test_export_npz.py  test_export_npz_meta.py  test_export_onnx.py  test_fastchess_runner.py  test_flask_app.py  test_init_fixup.py  test_jobserver_client.py  test_jobserver_trainer.py  test_jobserver_trainer_loop.py  test_loss.py  test_monitoring_integration.py  test_move_encoding.py  test_network_skeleton.py  test_npz_writer.py  test_orchestrator_core.py  test_orchestrator_recovery.py  test_orchestrator_seeds.py  test_orchestrator_state.py  test_pgn_utils.py  test_phase_runner.py  test_pipeline_orchestrator.py  test_pipeline_reproducibility.py  test_position_encoding.py  test_promote_resume.py  test_promotion.py  test_resnet_parity_state_dict_keys.py  test_run_config.py  test_sample.py  test_selfplay_config.py  test_selfplay_resume.py  (+17 more)
(+429 files in other folders)
