[tool.poetry]
name = "nanozero-jobserver"
version = "1.5.0"
description = "Distributed job server for AlphaZero self-play (Phase 13, cf. ADR-014)"
authors = ["NanoZero contributors"]
license = "MIT"
readme = "README.md"
packages = [{include = "nanozero_jobserver", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115"
uvicorn = {extras = ["standard"], version = "^0.30"}
pydantic = "^2.7"
pyyaml = "^6.0"
numpy = "^1.26"
psycopg = {extras = ["binary", "pool"], version = "^3.2"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
httpx = "^0.27"
ruff = "^0.5"
mypy = "^1.10"
testcontainers = {extras = ["postgres"], version = "^4.0"}

[tool.poetry.scripts]
nanozero-jobserver = "nanozero_jobserver.main:cli"

[build-system]
requires = ["poetry-core>=1.5"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP", "N"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
