[tool.poetry]
name = "nanozero-training"
version = "1.5.0"
description = "AlphaZero self-play training pipeline for nanozero chess engine"
authors = ["NanoZero contributors"]
license = "MIT"
readme = "README.md"
packages = [{include = "nanozero_training", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = ">=2.1"
numpy = "^1.26"
"python-chess" = "^1.999"
pyyaml = "^6.0"
flask = "^3.0"
click = "^8.1"
# Phase 13.4 — jobserver HTTP client (worker reaches out to nanozero-jobserver).
httpx = "^0.27"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
pytest-mock = "^3.12"
ruff = "^0.5"
mypy = "^1.10"
coverage = "^7.5"
types-pyyaml = "^6.0"

[tool.poetry.scripts]
nanozero-training = "nanozero_training.cli:main"
# Phase 13.5c — distributed-mode entry points.
nanozero-trainer-stream = "nanozero_training.jobserver_client.cli:trainer_stream_main"
nanozero-jobserver-seed = "nanozero_training.jobserver_client.cli:jobserver_seed_main"

[build-system]
requires = ["poetry-core>=1.5"]
build-backend = "poetry.core.masonry.api"

# ====== Configuration tooling ======

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
markers = [
    "slow: tests longs (subprocess UCI réel, GPU, fixtures lourdes) — opt-in via -m slow",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]

[tool.coverage.run]
source = ["src/nanozero_training"]
branch = true

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["scripts/install-fastchess-w3090.md"]

[tool.ruff.lint]
select = [
    "E", "F", "W",      # pycodestyle + pyflakes
    "I",                # isort
    "N",                # pep8-naming
    "UP",               # pyupgrade
    "B",                # bugbear
    "A",                # builtins shadowing
    "C4",               # comprehensions
    "PT",               # pytest style
    "RET",              # return
    "SIM",              # simplify
    "TID",              # tidy imports
    "PL",               # pylint
    "RUF",              # ruff
]
ignore = [
    "PLR0913",          # too many arguments (acceptable in scientific code)
    "PLR2004",          # magic numbers (acceptable in tests / configs)
    "RUF002",           # × (MULTIPLICATION SIGN) intentionnel : notation maths docstrings
    "RUF003",           # idem dans les commentaires (8×96, lr × wd, ...)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLR2004", "S101"]
"scripts/*.py" = ["T201"]   # allow print in CLI scripts

[tool.mypy]
python_version = "3.10"
strict = true
show_error_codes = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_reexport = true
disallow_any_explicit = false   # numpy/torch interop
plugins = ["numpy.typing.mypy_plugin"]

[[tool.mypy.overrides]]
module = ["chess.*", "flask.*"]
ignore_missing_imports = true
